fixed overflow styling

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -165,7 +165,7 @@ aside#menu-bar form#leftform li{
 aside#menu-bar ul#recent-searches{
     width: 150px;
     max-height: 250px;
-    overflow-x: scroll;
+    overflow-y: scroll;
     word-wrap: break-word; 
     margin: 0;
     margin-left: -4px;
